Possibly fixed the agoby problem, it is hard to test as this problem does not appear on localhost. My localhost shows the space in Firefox. I explicitly added a white space, RB-245. Also fixed the requirement title pushing out the controls on the side if too long.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,13 +50,14 @@
 .requirement-header-title {
   font-size: large;
   padding: 16px;
-  width: 100%;
+  overflow: auto;
   cursor: pointer;
+  flex-grow: 1;
 }
 .req-title {
-  margin-right: 12px;
   min-width: 100px;
   font-weight: bold;
+  margin: 0;
 }
 .vote-button-container {
   display: flex;
